Style Updates to Fix Text Alignment

--- a/packages/terra-framework-docs/src/terra-dev-site/theme/orion-fusion-theme/FilterPills.module.scss
+++ b/packages/terra-framework-docs/src/terra-dev-site/theme/orion-fusion-theme/FilterPills.module.scss
@@ -8,7 +8,7 @@
     --terra-framework-docs-example-reset-button-margin-bottom: -2.95833rem;
 
     // Applied Filters Toolbar Example
-    --terra-framework-docs-filter-pills-doc-example-applied-filters-border: 1px solid #64696c;
+    --terra-framework-docs-filter-pills-doc-example-applied-filters-border: 1px solid #cbcacb;
     --terra-framework-docs-filter-pills-doc-example-applied-filters-content-panel-background-color: #fff;
     --terra-framework-docs-filter-pills-doc-example-applied-filters-content-panel-padding: 0;
     --terra-framework-docs-filter-pills-doc-example-applied-filters-label-color: #1c1f21;
@@ -19,9 +19,9 @@
     --terra-framework-docs-filter-pills-doc-example-applied-filters-toolbar-padding-right: 0.33333rem;
     --terra-framework-docs-filter-pills-doc-example-applied-filters-toolbar-padding-top: 0.08333rem;
     --terra-framework-docs-filter-pills-doc-example-applied-filters-flex-item-start-margin-right: 0.5rem;
-    --terra-framework-docs-filter-pills-doc-example-applied-filters-flex-item-start-padding-top: 0.54167rem;
+    --terra-framework-docs-filter-pills-doc-example-applied-filters-flex-item-start-padding-top: 0.5rem;
     --terra-framework-docs-filter-pills-doc-example-applied-filters-flex-item-end-margin-left: 0;
-    --terra-framework-docs-filter-pills-doc-example-applied-filters-flex-item-end-padding-top: 0.20833rem;
+    --terra-framework-docs-filter-pills-doc-example-applied-filters-flex-item-end-padding-top: 0.16667rem;
 
     // Truncated Label Example
     --terra-framework-docs-filter-pills-doc-example-truncated-label-container-background-color: rgba(189, 16, 224, 0.05);
@@ -37,6 +37,6 @@
     --terra-framework-docs-filter-pills-doc-example-search-terms-label-font-size: 1.07142rem;
     --terra-framework-docs-filter-pills-doc-example-search-terms-label-font-weight: 700;
     --terra-framework-docs-filter-pills-doc-example-search-terms-label-padding-bottom: 0.21428rem;
-    --terra-framework-docs-filter-pills-doc-example-search-terms-label-padding-left: 0.14285rem;    
+    --terra-framework-docs-filter-pills-doc-example-search-terms-label-padding-left: 0.14285rem;
   }
 }
