--- a/packages/terra-pills/src/orion-fusion-theme/Pill.module.scss
+++ b/packages/terra-pills/src/orion-fusion-theme/Pill.module.scss
@@ -3,9 +3,9 @@
 :local {
   .orion-fusion-theme {
     // Pill List Item
-    --terra-pills-pill-list-item-margin-bottom: 0.33333rem;
+    --terra-pills-pill-list-item-margin-bottom: 0.2rem;
     --terra-pills-pill-list-item-margin-right: 0.5rem;
-    --terra-pills-pill-list-item-margin-top: 0.33333rem;
+    --terra-pills-pill-list-item-margin-top: 0.25rem;
 
     // Pill
     --terra-pills-pill-background-color: #fff;
@@ -15,9 +15,9 @@
     --terra-pills-pill-color: #595f62;
     --terra-pills-pill-font-size: 1rem;
     --terra-pills-pill-height: 2rem;
-    --terra-pills-pill-margin-bottom: 0.33333rem;
+    --terra-pills-pill-margin-bottom: 0.2rem;
     --terra-pills-pill-margin-right: 0.5rem;
-    --terra-pills-pill-margin-top: 0.33333rem;
+    --terra-pills-pill-margin-top: 0.25rem;
     --terra-pills-pill-focus-border-color: #868a8c;
     --terra-pills-pill-focus-border-width: 1px;
     --terra-pills-pill-focus-box-shadow: none;
@@ -123,6 +123,16 @@
     --terra-pills-rollup-pill-active-background-color: #bcbfc0;
     --terra-pills-rollup-pill-active-border: 1px solid #868a8c;
     --terra-pills-rollup-pill-active-color: #222a2e;
+
+    // Text alignment for all but IE + Safari
+    --terra-pills-rollup-pill-label-not-ms-top: 0;
+    --terra-pills-pill-label-not-ms-top: 0;
+    --terra-pills-selectable-removable-pill-label-not-ms-top: 0;
+
+    // Text alignment for Firefox
+    --terra-pills-rollup-pill-label-moz-top: -0.05em;
+    --terra-pills-pill-label-moz-top: -0.05em;
+    --terra-pills-selectable-removable-pill-label-moz-top: -0.05em;
 
     // Popup Content for Truncated Basic Pill
     --terra-pills-popup-pill-label-color: #595f62;
